# DZ_ABC

./: Пояснительная записка .txt
abc_dz1/: bus.h  car.cpp  container.cpp  main.cpp  truck.cpp  truck.h  vehicle.cpp
abc_dz1/tests/: example.txt  test4.txt
abc_dz_1/abc_dz1_source/: CMakeLists.txt  bus.cpp  car.h  container.h  main.cpp  vehicle.h
abc_dz_2/: UML_diagram_abc2.html  Пояснительная записка .txt  Схема работы программы.html
abc_dz_2/abc_dz2_source/: CMakeLists.txt  main.cpp
abc_dz_2/abc_dz2_source/classes/: bus.cpp  bus.h  car.cpp  car.h  truck.cpp  truck.h  vehicle.cpp  vehicle.h
abc_dz_2/abc_dz2_source/container/: container.cpp  container.h
abc_dz_2/abc_dz2_source/output/: output1.txt
abc_dz_2/abc_dz2_source/tests/: test4.txt  test5.txt
abc_dz_3/: Пояснительная записка к дз3 АВС.txt
abc_dz_3/abc_dz3_source/: container.py  main.py
abc_dz_3/abc_dz3_source/tests/: test2.txt
abc_dz_3/abc_dz3_source/vehicle/: bus.py  car.py  truck.py  vehicle.py
abc_dz_4/: filtrator.lst  inrnd.c  main.c  makefile  output.c  output2.txt  task  Пояснительная записка к дз4 АВС .txt
abc_dz_4/abc_dz_4_source/: data.h  extdata.h  filtrator.asm  input.c  output1.txt
abc_dz_4/abc_dz_4_source/tests/: test1.txt  test3.txt
abc_dz_4/tests/: test2.txt
abc_dz_5/: Пояснительная записка.txt
abc_dz_5/src/: CMakeLists.txt  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp
